--- a/collated/main/A0140010M.md
+++ b/collated/main/A0140010M.md
@@ -3,6 +3,10 @@
 ``` java
 public class SaveCommand extends Command {
 
+    public static final String SYMBOL_ASTERISK = "*";
+    public static final String SYMBOL_CARET = "^";
+    public static final String SYMBOL_HASH = "#";
+    public static final String SYMBOL_PLUS = "+";
     public static final String COMMAND_WORD = "save";
     public static final Object MESSAGE_USAGE = COMMAND_WORD
             + ": Saves/Creates a copy of the file to a specified location\n"
@@ -18,18 +22,24 @@ public class SaveCommand extends Command {
     }
     @Override
     public CommandResult execute() throws CommandException, IOException {
+        if (isInvalidPath()) {
+            return new CommandResult(Messages.MESSAGE_INVALID_PATH);
+        }
         File file = new File(this.path);
         FileUtil.createIfMissing(file);
         XmlFileStorage.saveDataToFile(file, new XmlSerializableTaskManager(model.getTaskManager()));
 
         return new CommandResult(String.format(MESSAGE_SUCCESS));
     }
-}
 ```
 ###### \java\typetask\logic\commands\SettingCommand.java
 ``` java
 public class SettingCommand extends Command {
 
+    public static final String SYMBOL_ASTERISK = "*";
+    public static final String SYMBOL_CARET = "^";
+    public static final String SYMBOL_HASH = "#";
+    public static final String SYMBOL_PLUS = "+";
     public static final String COMMAND_WORD = "setting";
     public static final Object MESSAGE_USAGE = COMMAND_WORD
             + ": Changes the default saving location of the file \n"
@@ -45,6 +55,9 @@ public class SettingCommand extends Command {
     }
     @Override
     public CommandResult execute() throws CommandException, IOException {
+        if (isInvalidPath()) {
+            return new CommandResult(Messages.MESSAGE_INVALID_PATH);
+        }
         ModifyConfigData mcd = new ModifyConfigData(config);
         mcd.setTaskManagerFilePath(FileUtil.getPath(path));
         storage.setTaskManagerFilePath(path);
@@ -52,13 +65,11 @@ public class SettingCommand extends Command {
 
         return new CommandResult(String.format(MESSAGE_SUCCESS));
     }
-
-
-}
 ```
 ###### \java\typetask\logic\commands\UseCommand.java
 ``` java
 public class UseCommand extends Command {
+
     public static final String COMMAND_WORD = "use";
     public static final Object MESSAGE_USAGE = COMMAND_WORD
             + ": Uses the taskManager from another location\n"
