--- a/collated/main/A0144902L.md
+++ b/collated/main/A0144902L.md
@@ -1,7 +1,8 @@
 # A0144902L
 ###### \java\typetask\commons\core\Messages.java
 ``` java
-    public static final String MESSAGE_TASK_NOT_FOUND = "%1$d task(s) listed!";
+    public static final String MESSAGE_TASK_NOT_FOUND = "Task not found";
+    public static final String MESSAGE_INVALID_PATH = "Invalid path";
 ```
 ###### \java\typetask\logic\commands\DoneCommand.java
 ``` java
@@ -65,6 +66,23 @@ public class ListPriorityCommand extends Command {
         model.updateFilteredTaskList(priority);
         return new CommandResult(MESSAGE_SUCCESS);
     }
+}
+```
+###### \java\typetask\logic\commands\SaveCommand.java
+``` java
+    public boolean isInvalidPath() {
+        return (path.contains(SYMBOL_PLUS) || path.contains (SYMBOL_HASH) ||
+                path.contains (SYMBOL_CARET) || path.contains (SYMBOL_ASTERISK));
+    }
+}
+```
+###### \java\typetask\logic\commands\SettingCommand.java
+``` java
+    public boolean isInvalidPath() {
+        return (path.contains(SYMBOL_PLUS) || path.contains (SYMBOL_HASH) ||
+                path.contains (SYMBOL_CARET) || path.contains (SYMBOL_ASTERISK));
+    }
+
 }
 ```
 ###### \java\typetask\logic\parser\CliSyntax.java
