--- a/collated/test/A0144902L.md
+++ b/collated/test/A0144902L.md
@@ -135,6 +135,46 @@ public class ListCommandTest extends TypeTaskGuiTest {
     }
 }
 ```
+###### \java\guitests\SaveCommandTest.java
+``` java
+public class SaveCommandTest extends TypeTaskGuiTest {
+
+    @Test
+    public void save() {
+        //invalid path
+        commandBox.runCommand("save C:/Desktop/^*+#");
+        assertResultMessage(Messages.MESSAGE_INVALID_PATH);
+
+        //valid path
+        commandBox.runCommand("save C:/Desktop/myTask");
+        assertResultMessage(SaveCommand.MESSAGE_SUCCESS);
+
+        //invalid command
+        commandBox.runCommand("saveC:/Desktop/myTask");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+}
+```
+###### \java\guitests\SettingCommandTest.java
+``` java
+public class SettingCommandTest extends TypeTaskGuiTest {
+
+    @Test
+    public void setting() {
+        //invalid path
+        commandBox.runCommand("setting C:/Desktop/^*+#");
+        assertResultMessage(Messages.MESSAGE_INVALID_PATH);
+
+        //valid path
+        commandBox.runCommand("setting C:/Desktop/myTask");
+        assertResultMessage(SettingCommand.MESSAGE_SUCCESS);
+
+        //invalid command
+        commandBox.runCommand("settingC:/Desktop/myTask");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+}
+```
 ###### \java\typetask\model\task\TaskTest.java
 ``` java
     @Test
