--- a/collated/main/A0142255M.md
+++ b/collated/main/A0142255M.md
@@ -238,8 +238,8 @@ public class ViewCommand extends Command {
     public static final String COMMAND_WORD = "view";
     public static final String SHORT_COMMAND_WORD = "v";
 
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ":Navigates calendar to a day / week / month view.\n"
-            + "Example: " + COMMAND_WORD + "week";
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ":Navigates calendar to a day / week / month view. \n"
+            + "Example: " + COMMAND_WORD + " week";
 
     public static final String MESSAGE_SUCCESS = "Calendar view switched to %s view.";
 
@@ -366,7 +366,8 @@ public class ViewCommandParser {
     private void indicateTaskManagerChanged() {
         raise(new TaskManagerChangedEvent(taskManager));
         raise(new FilteredTaskListUpdatedEvent(getFilteredTaskList()));
-        raise(new PopulateRecurringGhostTaskEvent(getAllRecurringGhostTasks()));
+        raise(new PopulateRecurringGhostTaskEvent(getAllUncompletedRecurringGhostTasks(),
+                                getAllCompletedRecurringGhostTasks()));
     }
 ```
 ###### \java\seedu\tache\model\ModelManager.java
@@ -384,8 +385,8 @@ public class ViewCommandParser {
     @Override
     public void updateFilteredListToShowAll() {
         filteredTasks.setPredicate(null);
-        raise(new FilteredTaskListUpdatedEvent(getFilteredTaskList()));
         updateFilteredTaskListType(TASK_LIST_TYPE_ALL);
+        raise(new FilteredTaskListUpdatedEvent(getFilteredTaskList()));
     }
 
 ```
@@ -393,14 +394,14 @@ public class ViewCommandParser {
 ``` java
     @Override
     public void updateFilteredListToShowTimed() {
-        updateFilteredTaskList(new PredicateExpression(new ActiveTimedQualifier(true)));
         updateFilteredTaskListType(TASK_LIST_TYPE_TIMED);
+        updateFilteredTaskList(new PredicateExpression(new ActiveTimedQualifier(true)));
     }
 
     @Override
     public void updateFilteredListToShowFloating() {
-        updateFilteredTaskList(new PredicateExpression(new ActiveTimedQualifier(false)));
         updateFilteredTaskListType(TASK_LIST_TYPE_FLOATING);
+        updateFilteredTaskList(new PredicateExpression(new ActiveTimedQualifier(false)));
     }
 
 ```
@@ -413,8 +414,8 @@ public class ViewCommandParser {
     @Override
     public void updateFilteredTaskList(Set<String> keywords) {
         assert keywords != null;
-        updateFilteredTaskList(new PredicateExpression(new MultiQualifier(keywords)));
         updateFilteredTaskListType(TASK_LIST_TYPE_FOUND);
+        updateFilteredTaskList(new PredicateExpression(new MultiQualifier(keywords)));
         retainLatestKeywords(keywords);
         raise(new TaskListTypeChangedEvent("Find \"" + StringUtil.generateStringFromKeywords(keywords) + "\""));
     }
@@ -554,11 +555,11 @@ public class ViewCommandParser {
 ``` java
     @Override
     public boolean getTimedStatus() {
-        return isTimed;
-    }
-
-    public void setTimedStatus(boolean isTimed) {
-        this.isTimed = isTimed;
+        if (startDateTime.isPresent() || endDateTime.isPresent()) {
+            return true;
+        } else {
+            return false;
+        }
     }
 
 ```
@@ -598,13 +599,13 @@ public class ViewCommandParser {
                 new Task(new Name("Find a girlfriend"), new UniqueTagList("LowPriority")),
                 new Task(new Name("Walk the Dog"), Optional.of(new DateTime("14 April 2017")),
                             Optional.of(new DateTime("14 April 2017")), new UniqueTagList("MediumPriority"),
-                                true, true, false, RecurInterval.NONE, new ArrayList<Date>()),
+                            true, RecurInterval.NONE, new ArrayList<Date>()),
                 new Task(new Name("Buy Medicine"), Optional.of(new DateTime("15 April 2017")),
-                            Optional.empty(), new UniqueTagList("LowPriority"), true, true, false,
+                            Optional.empty(), new UniqueTagList("LowPriority"), true,
                             RecurInterval.NONE, new ArrayList<Date>()),
                 new Task(new Name("Submit Project Proposal"), Optional.empty(),
                             Optional.of(new DateTime("17 April 2017")), new UniqueTagList("HighPriority"),
-                                true, true, false, RecurInterval.NONE, new ArrayList<Date>()),
+                            true, RecurInterval.NONE, new ArrayList<Date>()),
             };
         } catch (IllegalValueException e) {
             throw new AssertionError("sample data cannot be invalid", e);
@@ -1337,119 +1338,6 @@ public class TaskListType extends UiPart<Region> {
     }
 
 }
-```
-###### \resources\html\calendar.html
-``` html
-<style>
-    * {
-        font-family: "Segoe UI Semibold";
-    }
-
-    .fc button {
-        color: #5f77bd;
-    }
-
-    .fc-toolbar h2 {
-        color: #5f77bd;
-    }
-
-    .fc-day-number {
-        color: #5f77bd;
-    }
-
-    .fc-day-header {
-        color: #5f77bd;
-    }
-
-    .fc-unthemed td.fc-today {
-        background: #c3cfe2;
-    }
-}
-</style>
-
-<body>
-    <div id='calendar'></div>
-</body>
-
-<script>
-
-$(document).ready(function() {
-    $('#calendar').fullCalendar({
-        contentHeight: 'auto',
-        header: {
-            left: 'prev, next, today',
-            center: 'title',
-            right: 'month, basicWeek, basicDay'
-        },
-        navLinks: true, // can click day/week names to navigate views
-        timeFormat: 'HH:mm',
-        selectable: true,
-        allDaySlot: false,
-        dayClick: function(date, jsEvent, view) {
-            $('#calendar').fullCalendar( 'changeView', 'agendaDay' );
-            $('#calendar').fullCalendar( 'gotoDate', date );
-        }
-    });
-    $('#calendar').fullCalendar('render');
-});
-
-function add_event(title, start, end, status) {
-    $(document).ready(function() {
-        var color = 'white';
-        if (status === "uncompleted") {
-            color = '#5f77bd';
-        } else if (status === "overdue") {
-            color = '#ef044b';
-        } else {
-            color = '#d9d9d9';
-        }
-        var event = {
-            title: title,
-            start: start,
-            color: color
-        };
-        if (end !== "'0'") {
-            event.end = end;
-        }
-        $('#calendar').fullCalendar( 'renderEvent', event, true );
-    });
-}
-
-function remove_all() {
-    $(document).ready(function() {
-        $('#calendar').fullCalendar( 'removeEvents' );
-    });
-}
-
-function change_view(view) {
-    var newView;
-    if (view === "day") {
-        newView = 'agendaDay';
-    } else if (view === "week") {
-        newView = 'agendaWeek';
-    } else {
-        newView = 'month';
-    }
-    $(document).ready(function() {
-        $('#calendar').fullCalendar( 'changeView', newView );
-    });
-}
-
-function change_reference_date(date) {
-    $(document).ready(function() {
-        $('#calendar').fullCalendar( 'gotoDate', date );
-        $('#calendar').fullCalendar( 'select', date );
-    });
-}
-
-function prev() {
-    $('#calendar').fullCalendar( 'prev' );
-}
-
-function next() {
-    $('#calendar').fullCalendar( 'next' );
-}
-</script>
 ```
 ###### \resources\view\MainWindow.fxml
 ``` fxml
