--- a/collated/main/A0139961U.md
+++ b/collated/main/A0139961U.md
@@ -30,7 +30,7 @@ import seedu.tache.model.ReadOnlyTaskManager;
 import seedu.tache.model.util.SampleDataUtil;
 
 /**
- * Adds a task to the task manager.
+ * Loads the data file from the specified file path.
  */
 public class LoadCommand extends Command implements Undoable {
 
@@ -48,7 +48,7 @@ public class LoadCommand extends Command implements Undoable {
     private boolean commandSuccess;
 
     /**
-     * Creates a SaveCommand using the directory entered by the user.
+     * Creates a LoadCommand using the directory entered by the user.
      *
      * @throws IllegalValueException if any of the raw values are invalid
      */
@@ -83,7 +83,7 @@ public class LoadCommand extends Command implements Undoable {
         }
         model.resetData(initialData);
         commandSuccess = true;
-        undoHistory.push(this);
+        UndoHistory.getInstance().push(this);
         return new CommandResult(String.format(MESSAGE_SUCCESS, newPath));
     }
 
@@ -97,7 +97,7 @@ public class LoadCommand extends Command implements Undoable {
         try {
             this.newPath = prevPath;
             this.execute();
-            undoHistory.remove(this);
+            UndoHistory.getInstance().pop();
             return String.format(MESSAGE_SUCCESS, newPath);
         } catch (CommandException e) {
             throw new CommandException(String.format(MESSAGE_FAILURE, prevPath));
@@ -123,7 +123,7 @@ import seedu.tache.model.ReadOnlyTaskManager;
 import seedu.tache.model.util.SampleDataUtil;
 
 /**
- * Adds a task to the task manager.
+ * Saves the data file to the specified directory.
  */
 public class SaveCommand extends Command implements Undoable {
 
@@ -180,7 +180,7 @@ public class SaveCommand extends Command implements Undoable {
         }
         model.resetData(initialData);
         commandSuccess = true;
-        undoHistory.push(this);
+        UndoHistory.getInstance().push(this);
         return new CommandResult(String.format(MESSAGE_SUCCESS, newPath));
     }
 
@@ -194,7 +194,7 @@ public class SaveCommand extends Command implements Undoable {
         try {
             this.newPath = prevPath;
             this.execute();
-            undoHistory.remove(this);
+            UndoHistory.getInstance().pop();
             return String.format(MESSAGE_SUCCESS, newPath);
         } catch (CommandException e) {
             throw new CommandException(String.format(MESSAGE_FAILURE, prevPath));
@@ -209,6 +209,71 @@ public class SaveCommand extends Command implements Undoable {
     public static final String FILTER_DUE_THIS_WEEK = "this week";
     public static final String FILTER_OVERDUE = "overdue";
 
+```
+###### \java\seedu\tache\logic\parser\HelpCommandParser.java
+``` java
+package seedu.tache.logic.parser;
+
+import static seedu.tache.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
+
+import seedu.tache.logic.commands.AddCommand;
+import seedu.tache.logic.commands.ClearCommand;
+import seedu.tache.logic.commands.Command;
+import seedu.tache.logic.commands.CompleteCommand;
+import seedu.tache.logic.commands.DeleteCommand;
+import seedu.tache.logic.commands.EditCommand;
+import seedu.tache.logic.commands.ExitCommand;
+import seedu.tache.logic.commands.FindCommand;
+import seedu.tache.logic.commands.HelpCommand;
+import seedu.tache.logic.commands.IncorrectCommand;
+import seedu.tache.logic.commands.ListCommand;
+import seedu.tache.logic.commands.LoadCommand;
+import seedu.tache.logic.commands.NextCommand;
+import seedu.tache.logic.commands.PrevCommand;
+import seedu.tache.logic.commands.SaveCommand;
+import seedu.tache.logic.commands.SelectCommand;
+import seedu.tache.logic.commands.UndoCommand;
+import seedu.tache.logic.commands.ViewCommand;
+
+
+/**
+ * Parses input arguments and creates a new HelpCommand object
+ */
+public class HelpCommandParser {
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the HelpCommand
+     * and returns an HelpCommand object for execution.
+     */
+    public Command parse(String args) {
+        String trimmedArgs = args.trim();
+        if (!trimmedArgs.equals("")) {
+            switch(trimmedArgs) {
+            case AddCommand.COMMAND_WORD:
+            case ClearCommand.COMMAND_WORD:
+            case CompleteCommand.COMMAND_WORD:
+            case DeleteCommand.COMMAND_WORD:
+            case EditCommand.COMMAND_WORD:
+            case ExitCommand.COMMAND_WORD:
+            case FindCommand.COMMAND_WORD:
+            case ListCommand.COMMAND_WORD:
+            case LoadCommand.COMMAND_WORD:
+            case SaveCommand.COMMAND_WORD:
+            case SelectCommand.COMMAND_WORD:
+            case UndoCommand.COMMAND_WORD:
+            case PrevCommand.COMMAND_WORD:
+            case NextCommand.COMMAND_WORD:
+            case ViewCommand.COMMAND_WORD:
+                return new HelpCommand(trimmedArgs);
+            default:
+                return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, HelpCommand.MESSAGE_USAGE));
+            }
+        } else {
+            return new HelpCommand();
+        }
+    }
+
+}
 ```
 ###### \java\seedu\tache\logic\parser\LoadCommandParser.java
 ``` java
@@ -304,7 +369,7 @@ public class SaveCommandParser {
 
     /** Returns the filtered task list type as a {@code String} */
     String getFilteredTaskListType();
-
+}
 ```
 ###### \java\seedu\tache\model\ModelManager.java
 ``` java
@@ -368,7 +433,7 @@ public class SaveCommandParser {
         @Override
         public boolean run(ReadOnlyTask task) {
             if (task.getEndDateTime().isPresent() && isDueThisWeek) {
-                return task.getEndDateTime().get().isSameWeek();
+                return task.getEndDateTime().get().isThisWeek();
             } else {
                 return false;
             }
@@ -400,18 +465,31 @@ public class SaveCommandParser {
 ```
 ###### \java\seedu\tache\model\task\DateTime.java
 ``` java
+    /**
+     * Checks if the @param date is same as this object's date.
+     * @param date: The date to check against this object's date.
+     * @return true if the dates are the same, else, return false.
+     */
     public boolean isSameDate(Date date) {
         SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy");
         return sdf.format(date).equals(sdf.format(this.date));
     }
 
+    /**
+     * Checks if this object's date is today.
+     * @return true if the date is today, else, return false.
+     */
     public boolean isToday() {
         Date today = new Date();
         SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy");
         return sdf.format(today).equals(sdf.format(this.date));
     }
 
-    public boolean isSameWeek() {
+    /**
+     * Checks if this object's date falls within this week.
+     * @return true if the date is within this week, else, return false.
+     */
+    public boolean isThisWeek() {
         Date today = new Date();
         Calendar cal = Calendar.getInstance();
         cal.setTime(today);
@@ -420,6 +498,11 @@ public class SaveCommandParser {
         return (thisWeekNo == cal.get(Calendar.WEEK_OF_YEAR));
     }
 
+    /**
+     * Removes the time portion in date by setting Hour/Minute/Second/Millisecond to zero.
+     * @param date: The object whose time will be remove.
+     * @return the date with time removed.
+     */
     public static Date removeTime(Date date) {
         Calendar cal = Calendar.getInstance();
         cal.setTime(date);
@@ -429,11 +512,13 @@ public class SaveCommandParser {
         cal.set(Calendar.MILLISECOND, 0);
         return cal.getTime();
     }
+
 ```
 ###### \java\seedu\tache\model\task\ReadOnlyTask.java
 ``` java
 package seedu.tache.model.task;
 
+import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
@@ -454,6 +539,7 @@ public interface ReadOnlyTask {
     boolean getTimedStatus();
     boolean isWithinDate(Date date);
     RecurState getRecurState();
+    List<Task> getCompletedRecurList();
     List<Task> getUncompletedRecurList();
     List<Task> getUncompletedRecurList(Date filterEndDate);
 
@@ -494,7 +580,6 @@ public class Task implements ReadOnlyTask {
     private Optional<DateTime> endDateTime;
     private UniqueTagList tags;
     private boolean isActive;
-    private boolean isTimed;
     private RecurState recurState;
 
     /**
@@ -507,25 +592,18 @@ public class Task implements ReadOnlyTask {
         this.endDateTime = Optional.empty();
         this.tags = new UniqueTagList(tags); // protect internal tags from changes in the arg list
         this.isActive = true;
-        this.isTimed = false;
         this.recurState = new RecurState();
     }
 
     public Task(Name name, Optional<DateTime> startDateTime, Optional<DateTime> endDateTime,
-                    UniqueTagList tags, boolean isTimed, boolean isActive, boolean isRecurring,
-                    RecurInterval interval, List<Date> recurCompletedList) {
+                    UniqueTagList tags, boolean isActive, RecurInterval interval, List<Date> recurCompletedList) {
         assert !CollectionUtil.isAnyNull(name, tags);
         this.name = name;
         this.tags = new UniqueTagList(tags); // protect internal tags from changes in the arg list
         this.startDateTime = startDateTime;
         this.endDateTime = endDateTime;
         this.isActive = isActive;
-        if (startDateTime.isPresent() || endDateTime.isPresent()) {
-            this.isTimed = true;
-        } else {
-            this.isTimed = false;
-        }
-        this.recurState = new RecurState(isRecurring, interval, recurCompletedList);
+        this.recurState = new RecurState(interval, recurCompletedList);
     }
 
     /**
@@ -533,8 +611,8 @@ public class Task implements ReadOnlyTask {
      */
     public Task(ReadOnlyTask source) {
         this(source.getName(), source.getStartDateTime(), source.getEndDateTime(), source.getTags(),
-                    source.getTimedStatus(), source.getActiveStatus(), source.getRecurState().isRecurring(),
-                    source.getRecurState().getRecurInterval(), source.getRecurState().getRecurCompletedList());
+                    source.getActiveStatus(), source.getRecurState().getRecurInterval(),
+                    source.getRecurState().getRecurCompletedList());
     }
 
     @Override
@@ -623,9 +701,9 @@ public class Task implements ReadOnlyTask {
         SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy");
         if (this.startDateTime.isPresent() && this.endDateTime.isPresent()) {
             if ((this.startDateTime.get().getDate().before(date) ||
-                    sdf.format(this.startDateTime.get().getDate()).equals(sdf.format(date))) &&
-                    this.endDateTime.get().getDate().after(date) ||
-                    sdf.format(this.endDateTime.get().getDate()).equals(sdf.format(date))) {
+                 sdf.format(this.startDateTime.get().getDate()).equals(sdf.format(date))) &&
+                 this.endDateTime.get().getDate().after(date) ||
+                 sdf.format(this.endDateTime.get().getDate()).equals(sdf.format(date))) {
                 return true;
             } else {
                 return false;
@@ -683,10 +761,12 @@ import java.util.Calendar;
 import java.util.Date;
 import java.util.Timer;
 import java.util.TimerTask;
+import java.util.logging.Logger;
 
 import javax.swing.ImageIcon;
 
 import javafx.collections.ObservableList;
+import seedu.tache.commons.core.LogsCenter;
 import seedu.tache.commons.events.model.TaskManagerChangedEvent;
 import seedu.tache.logic.Logic;
 import seedu.tache.model.task.DateTime;
@@ -698,6 +778,7 @@ import seedu.tache.model.task.ReadOnlyTask;
  */
 public class NotificationManager {
 
+    private static final Logger logger = LogsCenter.getLogger(UiManager.class);
     public static final int EVENT_TYPE = 0;
     public static final int DEADLINE_TYPE = 1;
     public static final int REMOVE_SECONDS_OFFSET = 3;
@@ -710,13 +791,23 @@ public class NotificationManager {
     public static final String START_TIME_WITHOUT_NAME_TEXT = "This task is starting in 2Hrs";
     public static final String FULL_STOP_TEXT = ".";
     public static final String AT_TEXT = " at ";
+    public static final String SYSTEM_TRAY_NOT_SUPPORTED_MESSAGE = "Your environment"
+            + "does not support system tray notification";
 
     private Logic logic;
     private Timer notificationTimer;
 
+    public NotificationManager() {
+        notificationTimer = new Timer();
+    }
+
     public NotificationManager(Logic logic) {
         this.logic = logic;
         notificationTimer = new Timer();
+    }
+
+    public Timer getNotificationTimer() {
+        return this.notificationTimer;
     }
 
     /**
@@ -759,6 +850,11 @@ public class NotificationManager {
         return cal.getTime();
     }
 
+    /**
+     * Checks if the @param dateTime is due in more than two hours.
+     * @param dateTime: the object to check.
+     * @return true if it is due in more than two hours, otherwise, return false.
+     */
     private boolean isDueInMoreThanTwoHours(DateTime dateTime) {
         Date now = new Date();
         if (getTwoHoursBefore(dateTime).before(now)) {
@@ -772,58 +868,62 @@ public class NotificationManager {
      * Shows a notification from the system tray.
      * @param task: The task that is being notified about.
      */
-    private void showSystemTrayNotification(ReadOnlyTask task, int type) {
-        SystemTray tray = SystemTray.getSystemTray();
-        ImageIcon icon = new ImageIcon(getClass().getResource(IMAGE_ICON_PATH));
-        java.awt.Image image = icon.getImage();
-        TrayIcon trayIcon = new TrayIcon(image, NOTIFICATION_TEXT);
-        trayIcon.setImageAutoSize(true);
+    void showSystemTrayNotification(ReadOnlyTask task, int type) {
+        if (SystemTray.isSupported()) { //Checks if the current environment supports System Tray
+            SystemTray tray = SystemTray.getSystemTray();
+            ImageIcon icon = new ImageIcon(getClass().getResource(IMAGE_ICON_PATH));
+            java.awt.Image image = icon.getImage();
+            TrayIcon trayIcon = new TrayIcon(image, NOTIFICATION_TEXT);
+            trayIcon.setImageAutoSize(true);
 
-        String displayMsg = "";
-        if (type == DEADLINE_TYPE) {
-            trayIcon.setToolTip(task.getName().fullName + DUE_TIME_WITH_NAME_TEXT);
-            displayMsg += DUE_TIME_WITHOUT_NAME_TEXT;
-            if (!task.getEndDateTime().get().getTimeOnly().isEmpty()) {
-                String time = task.getEndDateTime().get().getTimeOnly();
-                displayMsg += AT_TEXT + time.substring(0, time.length() - REMOVE_SECONDS_OFFSET) + FULL_STOP_TEXT;
-            } else {
-                displayMsg += FULL_STOP_TEXT;
+            String displayMsg = "";
+            if (type == DEADLINE_TYPE) {
+                trayIcon.setToolTip(task.getName().fullName + DUE_TIME_WITH_NAME_TEXT);
+                displayMsg += DUE_TIME_WITHOUT_NAME_TEXT;
+                if (!task.getEndDateTime().get().getTimeOnly().isEmpty()) {
+                    String time = task.getEndDateTime().get().getTimeOnly();
+                    displayMsg += AT_TEXT + time.substring(0, time.length() - REMOVE_SECONDS_OFFSET) + FULL_STOP_TEXT;
+                } else {
+                    displayMsg += FULL_STOP_TEXT;
+                }
             }
-        }
-        if (type == EVENT_TYPE) {
-            trayIcon.setToolTip(task.getName().fullName + START_TIME_WITH_NAME_TEXT);
-            displayMsg += START_TIME_WITHOUT_NAME_TEXT;
-            if (!task.getStartDateTime().get().getTimeOnly().isEmpty()) {
-                String time = task.getStartDateTime().get().getTimeOnly();
-                displayMsg += AT_TEXT + time.substring(0, time.length() - REMOVE_SECONDS_OFFSET) + FULL_STOP_TEXT;
-            } else {
-                displayMsg += FULL_STOP_TEXT;
+            if (type == EVENT_TYPE) {
+                trayIcon.setToolTip(task.getName().fullName + START_TIME_WITH_NAME_TEXT);
+                displayMsg += START_TIME_WITHOUT_NAME_TEXT;
+                if (!task.getStartDateTime().get().getTimeOnly().isEmpty()) {
+                    String time = task.getStartDateTime().get().getTimeOnly();
+                    displayMsg += AT_TEXT + time.substring(0, time.length() - REMOVE_SECONDS_OFFSET) + FULL_STOP_TEXT;
+                } else {
+                    displayMsg += FULL_STOP_TEXT;
+                }
             }
-        }
 
-        MenuItem dismissMenuItem = new MenuItem(DISMISS_TEXT);
-        dismissMenuItem.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                tray.remove(trayIcon);
+            MenuItem dismissMenuItem = new MenuItem(DISMISS_TEXT);
+            dismissMenuItem.addActionListener(new ActionListener() {
+                @Override
+                public void actionPerformed(ActionEvent e) {
+                    tray.remove(trayIcon);
+                }
+            });
+
+            PopupMenu popupMenu = new PopupMenu();
+            popupMenu.add(dismissMenuItem);
+
+            trayIcon.setPopupMenu(popupMenu);
+            try {
+                tray.add(trayIcon);
+            } catch (AWTException ex) {
+                ex.printStackTrace();
             }
-        });
-
-        PopupMenu popupMenu = new PopupMenu();
-        popupMenu.add(dismissMenuItem);
-
-        trayIcon.setPopupMenu(popupMenu);
-        try {
-            tray.add(trayIcon);
-        } catch (AWTException ex) {
-            ex.printStackTrace();
+            trayIcon.displayMessage(task.getName().fullName, displayMsg, MessageType.INFO);
+        } else {
+            logger.info(SYSTEM_TRAY_NOT_SUPPORTED_MESSAGE);
         }
-        trayIcon.displayMessage(task.getName().fullName, displayMsg, MessageType.INFO);
     }
 
     /**
-     * Removes all existing scheduled notifications and reschedule them based on the new TaskList
-     * @param event: Contains the new TaskList modified due to an event
+     * Removes all existing scheduled notifications and reschedule them based on the new TaskList.
+     * @param event: Contains the new TaskList modified due to an event.
      */
     public void updateNotifications(TaskManagerChangedEvent event) {
         notificationTimer.cancel(); //remove old scheduled notifications
@@ -833,7 +933,7 @@ public class NotificationManager {
     }
 
     /**
-     * Initialized the scheduling of tasks
+     * Initialized the scheduling of tasks.
      */
     public void start() {
         initNotificationTimerWithTasks(logic.getFilteredTaskList());
@@ -847,7 +947,7 @@ public class NotificationManager {
     }
 
     /**
-     * Shows a notification from the javafx UI
+     * Shows a notification from the javafx UI.
      * @param task: The task that is being notified about.
      */
     /*private void showUpdateNotification(ReadOnlyTask task) {
