--- a/collated/test/A0142255M.md
+++ b/collated/test/A0142255M.md
@@ -1,4 +1,31 @@
 # A0142255M
+###### \java\guitests\AddCommandTest.java
+``` java
+    @Test
+    public void add_invalidTask_failure() {
+        commandBox.runCommand(AddCommand.COMMAND_WORD + " ");
+        assertResultMessage(Name.MESSAGE_NAME_CONSTRAINTS);
+    }
+
+    @Test
+    public void add_shortCommand_success() {
+        TestTask toAdd = td.getFit;
+        commandBox.runCommand(AddCommand.SHORT_COMMAND_WORD + " " + toAdd.getName().fullName);
+        assertResultMessage(String.format(AddCommand.MESSAGE_SUCCESS, toAdd.toString()));
+    }
+```
+###### \java\guitests\ClearCommandTest.java
+``` java
+    public void clear_invalidCommand_failure() {
+        commandBox.runCommand("clearrrrrrr");
+        assertTrue(taskListPanel.isListMatching(td.getTypicalTasks()));
+    }
+
+    public void clear_additionalParameters_success() {
+        commandBox.runCommand(ClearCommand.COMMAND_WORD + " my entire task list");
+        assertClearCommandSuccess();
+    }
+```
 ###### \java\guitests\CommandBoxTest.java
 ``` java
     private static final String COMMAND_EMPTY = "";
@@ -53,6 +80,51 @@
 
 }
 ```
+###### \java\guitests\CompleteCommandTest.java
+``` java
+    @Test
+    public void complete_shortCommand_success() {
+        commandBox.runCommand(CompleteCommand.SHORT_COMMAND_WORD + " 1");
+        assertCompleteMessage(td.payDavid);
+        assertCompleteResult("list completed", td.payDavid);
+    }
+
+```
+###### \java\guitests\DeleteCommandTest.java
+``` java
+        //invalid index
+        commandBox.runCommand(DeleteCommand.COMMAND_WORD + " " + currentList.length + 1);
+        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+
+    }
+
+    @Test
+    public void delete_invalidParameter_failure() {
+        commandBox.runCommand("delete second task");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, DeleteCommand.MESSAGE_USAGE));
+    }
+
+    @Test
+    public void delete_shortCommand_success() {
+        commandBox.runCommand(DeleteCommand.SHORT_COMMAND_WORD + " 1");
+        TestTask[] currentList = td.getTypicalTasks();
+        int targetIndex = 1;
+        TestTask taskToDelete = currentList[targetIndex - 1];
+        TestTask[] expectedRemainder = TestUtil.removeTaskFromList(currentList, targetIndex);
+
+        //confirm the list now contains all previous tasks except the deleted task
+        assertTrue(taskListPanel.isListMatching(expectedRemainder));
+
+        //confirm the result message is correct
+        assertResultMessage(String.format(MESSAGE_DELETE_TASK_SUCCESS, taskToDelete));
+    }
+
+    @Test
+    public void delete_invalidCommand_success() {
+        commandBox.runCommand("detele");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+```
 ###### \java\guitests\EditCommandTest.java
 ``` java
     @Test
@@ -68,11 +140,63 @@
 ###### \java\guitests\EditCommandTest.java
 ``` java
     @Test
-    public void edit_duplicateTask_failure() {
+    public void edit_invalidCommand_failure() {
+        commandBox.runCommand("update");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
 
-        commandBox.runCommand("edit 5; name Buy Eggs and Bread; end_date 04-01-17; end_time 19:55:12; "
-                + "tag HighPriority;");
+    @Test
+    public void edit_shortCommand_success() throws IllegalValueException {
+        commandBox.runCommand(EditCommand.SHORT_COMMAND_WORD + " 1; tag MediumPriority");
+        int taskManagerIndex = 1;
+
+        TestTask taskToEdit = expectedTasksList[taskManagerIndex - 1];
+        TestTask editedTask = new TaskBuilder(taskToEdit).withTags("MediumPriority").build();
+
+        // confirm the new card contains the right data
+        TaskCardHandle editedCard = taskListPanel.navigateToTask(editedTask.getName().fullName);
+        assertMatching(editedTask, editedCard);
+
+        // confirm the list now contains all previous tasks plus the task with updated details
+        expectedTasksList[taskManagerIndex - 1] = editedTask;
+        assertTrue(taskListPanel.isListMatching(expectedTasksList));
+        assertResultMessage(String.format(EditCommand.MESSAGE_EDIT_TASK_SUCCESS, editedTask));
+    }
+```
+###### \java\guitests\EditCommandTest.java
+``` java
+    @Test
+    public void edit_duplicateTask_failure() {
+        commandBox.runCommand(EditCommand.COMMAND_WORD + " 5; name Buy Eggs and Bread; "
+            + "end_date 04-01-17; end_time 19:55:12; tag HighPriority;");
         assertResultMessage(EditCommand.MESSAGE_DUPLICATE_TASK);
+    }
+```
+###### \java\guitests\FindCommandTest.java
+``` java
+    @Test
+    public void find_noFilter_failure() {
+        commandBox.runCommand(FindCommand.COMMAND_WORD + " ");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+    }
+
+    @Test
+    public void find_shortCommand_success() {
+        assertFindResult(FindCommand.SHORT_COMMAND_WORD + " eggs", td.eggsAndBread);
+    }
+
+    @Test
+    public void find_dateTime_success() {
+        // start date and end date
+        assertFindResult(FindCommand.COMMAND_WORD + " 01/04/2017", td.eggsAndBread);
+
+        // start time and end time
+        assertFindResult(FindCommand.COMMAND_WORD + " 23:59:59", td.readBook);
+    }
+
+    @Test
+    public void find_tag_success() {
+        assertFindResult(FindCommand.COMMAND_WORD + " HighPriority", td.eggsAndBread);
     }
 ```
 ###### \java\guitests\guihandles\GuiHandle.java
@@ -304,11 +428,51 @@ public class TaskListTypeHandle extends GuiHandle {
     }
 }
 ```
+###### \java\guitests\HelpCommandTest.java
+``` java
+    @Test
+    public void help_prevCommand_success() {
+        commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + PrevCommand.COMMAND_WORD);
+        assertResultMessage(PrevCommand.MESSAGE_USAGE);
+    }
+
+    @Test
+    public void help_nextCommand_success() {
+        commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + NextCommand.COMMAND_WORD);
+        assertResultMessage(NextCommand.MESSAGE_USAGE);
+    }
+
+    @Test
+    public void help_viewCommand_success() {
+        commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + ViewCommand.COMMAND_WORD);
+        assertResultMessage(ViewCommand.MESSAGE_USAGE);
+    }
+
+    @Test
+    public void help_openUserGuide_success() {
+        commandBox.runCommand(HelpCommand.COMMAND_WORD);
+        mainMenu.openHelpWindowUsingAccelerator().closeWindow();
+        assertResultMessage(HelpCommand.SHOWING_HELP_MESSAGE);
+    }
+
+    @Test
+    public void help_shortCommand_success() {
+        commandBox.runCommand(HelpCommand.SHORT_COMMAND_WORD + " load");
+        assertResultMessage(LoadCommand.MESSAGE_USAGE);
+    }
+
+    @Test
+    public void help_invalidHelpCommand_failure() {
+        commandBox.runCommand("helpppppp");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+
+```
 ###### \java\guitests\ListCommandTest.java
 ``` java
     @Test
     public void list_timedTasks_success() {
-        assertListResult("list timed", "Timed", td.eggsAndBread, td.visitFriend, td.readBook);
+        assertListResult(ListCommand.COMMAND_WORD + " timed", "Timed", td.eggsAndBread, td.visitFriend, td.readBook);
         commandBox.runCommand("list");
         commandBox.runCommand("edit 2 change sd to 2 months ago and st to 9am and"
                               + " ed to 1 months ago and et to 9pm");
@@ -317,12 +481,12 @@ public class TaskListTypeHandle extends GuiHandle {
         for (int i = 1; i < 5; i++) {
             expectedTasksList.add(tempTasksList[i]);
         }
-        assertListResult("list timed", "Timed", expectedTasksList.toArray(new TestTask[0]));
+        assertListResult(ListCommand.COMMAND_WORD + " timed", "Timed", expectedTasksList.toArray(new TestTask[0]));
     }
 
     @Test
     public void list_floatingTasks_success() throws IllegalValueException {
-        assertListResult("list floating", "Floating", td.payDavid, td.visitSarah);
+        assertListResult(ListCommand.COMMAND_WORD + " floating", "Floating", td.payDavid, td.visitSarah);
         commandBox.runCommand("list");
         commandBox.runCommand("add watch tv");
         TestTask[] tempTasksList = td.getTypicalTasks();
@@ -331,8 +495,32 @@ public class TaskListTypeHandle extends GuiHandle {
             expectedTasksList.add(tempTasksList[i]);
         }
         expectedTasksList.add(new TaskBuilder().withName("watch tv").build());
-        assertListResult("list floating", "Floating", expectedTasksList.toArray(new TestTask[0]));
+        assertListResult(ListCommand.COMMAND_WORD + " floating", "Floating",
+            expectedTasksList.toArray(new TestTask[0]));
     }
+```
+###### \java\guitests\ListCommandTest.java
+``` java
+    @Test
+    public void list_invalidFilter_failure() {
+        commandBox.runCommand(ListCommand.COMMAND_WORD + " time");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
+    }
+
+    @Test
+    public void list_shortCommand_success() {
+        assertListResult(ListCommand.SHORT_COMMAND_WORD + " all", "All", td.getTypicalTasks());
+
+        //list after deleting one result
+        commandBox.runCommand("delete 1");
+        TestTask[] tempTasksList = td.getTypicalTasks();
+        ArrayList<TestTask> expectedTasksList = new ArrayList<TestTask>();
+        for (int i = 0; i < tempTasksList.length - 1; i++) {
+            expectedTasksList.add(tempTasksList[i + 1]);
+        }
+        assertListResult(ListCommand.SHORT_COMMAND_WORD + " all", "All", expectedTasksList.toArray(new TestTask[0]));
+    }
+
 ```
 ###### \java\guitests\PrevAndNextCommandTest.java
 ``` java
@@ -347,26 +535,35 @@ import seedu.tache.logic.commands.PrevCommand;
 public class PrevAndNextCommandTest extends TaskManagerGuiTest {
 
     @Test
-    public void prev_success() {
-        commandBox.runCommand("prev");
+    public void prev() {
+        commandBox.runCommand(PrevCommand.COMMAND_WORD);
         assertResultMessage(PrevCommand.MESSAGE_SUCCESS);
 
-        commandBox.runCommand("p");
+        commandBox.runCommand(PrevCommand.SHORT_COMMAND_WORD);
         assertResultMessage(PrevCommand.MESSAGE_SUCCESS);
     }
 
     @Test
-    public void next_success() {
-        commandBox.runCommand("next");
+    public void next() {
+        commandBox.runCommand(NextCommand.COMMAND_WORD);
         assertResultMessage(NextCommand.MESSAGE_SUCCESS);
 
-        commandBox.runCommand("n");
+        commandBox.runCommand(NextCommand.SHORT_COMMAND_WORD);
+        assertResultMessage(NextCommand.MESSAGE_SUCCESS);
+    }
+
+    @Test
+    public void prevAndNext_additionalParameters_success() {
+        commandBox.runCommand(PrevCommand.COMMAND_WORD + " month");
+        assertResultMessage(PrevCommand.MESSAGE_SUCCESS);
+
+        commandBox.runCommand(NextCommand.COMMAND_WORD + " prev next next");
         assertResultMessage(NextCommand.MESSAGE_SUCCESS);
     }
 
     @Test
     public void prevAndNext_invalidCommand_failure() {
-        commandBox.runCommand("prv");
+        commandBox.runCommand("previous");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
 
         commandBox.runCommand("ne");
@@ -397,12 +594,51 @@ public class ResultDisplayTest extends TaskManagerGuiTest {
     public void resultDisplay_unknownCommand_failure() {
         commandBox.runCommand("yutyfcydvchui");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
 
+    @Test
+    public void resultDisplay_invalidCommand_failure() {
         commandBox.runCommand("");
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, HelpCommand.MESSAGE_USAGE));
     }
 
 }
+```
+###### \java\guitests\SaveAndLoadCommandTest.java
+``` java
+    public void save_noDirectoryGiven_failure() {
+        commandBox.runCommand(SaveCommand.COMMAND_WORD + " ");
+        assertResultMessage("");
+    }
+
+```
+###### \java\guitests\SelectCommandTest.java
+``` java
+    @Test
+    public void select_invalidCommand_failure() {
+        commandBox.runCommand("selectgysudcv");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+
+    @Test
+    public void select_shortCommand_success() {
+        int index = 1;
+        commandBox.runCommand(SelectCommand.SHORT_COMMAND_WORD + " " + index);
+        assertResultMessage("Selected Task: " + index);
+        assertTaskSelected(index);
+    }
+
+    @Test
+    public void select_invalidIndex_failure() {
+        commandBox.runCommand(SelectCommand.COMMAND_WORD + " -1");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, SelectCommand.MESSAGE_USAGE));
+
+        commandBox.runCommand(SelectCommand.COMMAND_WORD + " Book");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, SelectCommand.MESSAGE_USAGE));
+
+        commandBox.runCommand(SelectCommand.COMMAND_WORD + " ");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, SelectCommand.MESSAGE_USAGE));
+    }
 ```
 ###### \java\guitests\StatusBarFooterTest.java
 ``` java
@@ -682,7 +918,7 @@ public class TaskCountTest extends TaskManagerGuiTest {
         assertEquals(taskCount.getFloatingTaskCount().getText(), "2");
         assertEquals(taskCount.getTimedTaskCount().getText(), "3");
 
-        commandBox.runCommand("edit 1 change ed to 4 jun and change et to 2pm");
+        commandBox.runCommand("edit 1 change ed to 4 jun and et to 2pm");
 
         assertEquals(taskCount.getFloatingTaskCount().getText(), "1");
         assertEquals(taskCount.getTimedTaskCount().getText(), "4");
@@ -763,6 +999,30 @@ public class TaskListTypeTest extends TaskManagerGuiTest {
     protected TaskCountHandle taskCount;
     protected StatusBarFooterHandle statusBarFooter;
 ```
+###### \java\guitests\UndoCommandTest.java
+``` java
+    @Test
+    public void undo_shortCommand_success() {
+        commandBox.runCommand("edit 1; name Pay David 15 for cab");
+        commandBox.runCommand(UndoCommand.SHORT_COMMAND_WORD + " ");
+        assertUndoSuccess(td.getTypicalTasks());
+    }
+
+    @Test
+    public void undo_additionalParameters_success() {
+        commandBox.runCommand("delete 2");
+        commandBox.runCommand(UndoCommand.SHORT_COMMAND_WORD + " delete");
+        assertUndoSuccess(td.getTypicalTasks());
+    }
+
+    @Test
+    public void undo_invalidCommand_failure() {
+        commandBox.runCommand(td.findGirlfriend.getAddCommand());
+        commandBox.runCommand("undoodifbshvh");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+        assertFalse(taskListPanel.getNumberOfTasks() == td.getTypicalTasks().length);
+    }
+```
 ###### \java\guitests\ViewCommandTest.java
 ``` java
 package guitests;
@@ -780,28 +1040,28 @@ public class ViewCommandTest extends TaskManagerGuiTest {
 
     @Test
     public void view_dayView_success() {
-        commandBox.runCommand("view day");
+        commandBox.runCommand(ViewCommand.COMMAND_WORD + " day");
         assertResultMessage(String.format(ViewCommand.MESSAGE_SUCCESS, VIEW_DAY));
 
-        commandBox.runCommand("v day");
+        commandBox.runCommand(ViewCommand.SHORT_COMMAND_WORD + " day");
         assertResultMessage(String.format(ViewCommand.MESSAGE_SUCCESS, VIEW_DAY));
     }
 
     @Test
     public void view_weekView_success() {
-        commandBox.runCommand("view week");
+        commandBox.runCommand(ViewCommand.COMMAND_WORD + " week");
         assertResultMessage(String.format(ViewCommand.MESSAGE_SUCCESS, VIEW_WEEK));
 
-        commandBox.runCommand("v week");
+        commandBox.runCommand(ViewCommand.SHORT_COMMAND_WORD + " week");
         assertResultMessage(String.format(ViewCommand.MESSAGE_SUCCESS, VIEW_WEEK));
     }
 
     @Test
     public void view_monthView_success() {
-        commandBox.runCommand("view month");
+        commandBox.runCommand(ViewCommand.COMMAND_WORD + " month");
         assertResultMessage(String.format(ViewCommand.MESSAGE_SUCCESS, VIEW_MONTH));
 
-        commandBox.runCommand("v month");
+        commandBox.runCommand(ViewCommand.SHORT_COMMAND_WORD + " month");
         assertResultMessage(String.format(ViewCommand.MESSAGE_SUCCESS, VIEW_MONTH));
     }
 
@@ -811,7 +1071,81 @@ public class ViewCommandTest extends TaskManagerGuiTest {
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
     }
 
+    @Test
+    public void view_invalidParameter_failure() {
+        commandBox.runCommand(ViewCommand.COMMAND_WORD + " mont");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, ViewCommand.MESSAGE_USAGE));
+    }
+
 }
+```
+###### \java\seedu\tache\commons\core\ConfigTest.java
+``` java
+    @Test
+    public void config_getTaskManagerName_success() {
+        assertEquals("Tache", new Config().getTaskManagerName());
+    }
+
+    @Test
+    public void config_equalsNullValue_failure() {
+        assertFalse(new Config() == null);
+    }
+```
+###### \java\seedu\tache\commons\core\VersionTest.java
+``` java
+    @Test
+    public void version_compareToNonVersion_equalIsWrong() {
+        assertFalse(new Version(50, 0, 23, true).equals(null));
+        assertFalse(new Version(5, 6, 1, false).equals(""));
+    }
+
+}
+```
+###### \java\seedu\tache\commons\util\StringUtilTest.java
+``` java
+    @Test(expected = NullPointerException.class)
+    public void stringUtilHasSpecialCharacters_null_failure() throws NullPointerException {
+        StringUtil.hasSpecialCharacters(null);
+    }
+
+    @Test
+    public void stringUtilHasSpecialCharacters_invalidString_failure() {
+        assertFalse(StringUtil.hasSpecialCharacters("0"));
+        assertFalse(StringUtil.hasSpecialCharacters(""));
+
+        // untrimmed
+        assertFalse(StringUtil.hasSpecialCharacters(" "));
+        assertFalse(StringUtil.hasSpecialCharacters(" 78"));
+
+        // contains whitespace
+        assertFalse(StringUtil.hasSpecialCharacters(" 89 865 "));
+    }
+
+}
+```
+###### \java\seedu\tache\model\task\DateTimeTest.java
+``` java
+    @Test
+    public void dateTime_compareTo() throws IllegalValueException {
+        DateTime yesterday = new DateTime("yesterday 3pm");
+        DateTime alsoYesterday = new DateTime("yesterday 3pm");
+        DateTime today = new DateTime("today");
+
+        assertEquals(0, yesterday.compareTo(alsoYesterday));
+        assertEquals(1, today.compareTo(yesterday));
+        assertEquals(-1, yesterday.compareTo(today));
+    }
+
+}
+```
+###### \java\seedu\tache\model\TaskManagerTest.java
+``` java
+    @Test(expected = TaskNotFoundException.class)
+    public void taskManagerRemoveTask_noSuchTask_failure() throws TaskNotFoundException {
+        TypicalTestTasks td = new TypicalTestTasks();
+        TaskManager taskManager = td.getTypicalTaskManager();
+        taskManager.removeTask(new Task(td.getFit));
+    }
 ```
 ###### \java\seedu\tache\testutil\TestTask.java
 ``` java
@@ -823,7 +1157,6 @@ public class ViewCommandTest extends TaskManagerGuiTest {
         this.tags = taskToCopy.getTags();
         this.startDateTime = taskToCopy.getStartDateTime();
         this.endDateTime = taskToCopy.getEndDateTime();
-        this.isTimed = taskToCopy.getTimedStatus();
         this.isActive = taskToCopy.getActiveStatus();
         this.recurState = taskToCopy.getRecurState();
     }
@@ -840,6 +1173,21 @@ public class ViewCommandTest extends TaskManagerGuiTest {
         if (this.getEndDateTime().isPresent()) {
             sb.append(" to " + sdf.format(this.getEndDateTime().get().getDate()));
         }
+        switch (this.getRecurState().getRecurInterval()) {
+        case DAY:
+            sb.append(" " + CliSyntax.RECURRENCE_IDENTIFIER_DAILY[0]);
+            break;
+        case WEEK:
+            sb.append(" " + CliSyntax.RECURRENCE_IDENTIFIER_WEEKLY[0]);
+            break;
+        case MONTH:
+            sb.append(" " + CliSyntax.RECURRENCE_IDENTIFIER_MONTHLY[0]);
+            break;
+        case YEAR:
+            sb.append(" " + CliSyntax.RECURRENCE_IDENTIFIER_YEARLY[0]);
+            break;
+        default:
+        }
         if (this.getTags().iterator().hasNext()) {
             sb.append(" t/ ");
         }
@@ -849,7 +1197,7 @@ public class ViewCommandTest extends TaskManagerGuiTest {
 
     @Override
     public boolean getTimedStatus() {
-        return isTimed;
+        return startDateTime.isPresent() || endDateTime.isPresent();
     }
 
 ```
